[package]
name = "hocon-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["serde"]
serde = [ "dep:serde" ]

[dependencies]
thiserror = "1.0.56"
nom = "7.1.3"
serde = { version = "1.0.196", optional = true }

[dev-dependencies]
serde = { version = "1.0.196", features = ["derive"] }
